--- a/ _config.yml
+++ b/ _config.yml
@@ -1,4 +1,6 @@
-name: Vixphy
+title: Vixphy
+description: 
+show_downloads: false
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
