Update url base.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              renato@vixphy.com.br
 description:        Suloção
 author:             Start Bootstrap
 baseurl:            ""
-url:                "https://vixphy.github.io"
+url:                "https://vixphy.com.br"
 
 # Social Profiles
 twitter_username:   
