--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Vixphy
 email:              renato@vixphy.com.br
-description:        Suloção
+description:        Suloção em Nuvem
 author:             Start Bootstrap
 baseurl:            ""
 url:                "https://vixphy.com.br"
