--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Vixphy
 email:              renato@vixphy.com.br
-description:        Suloção em Nuvem
-author:             Start Bootstrap
+description:        Especialistas em nuvem
+author:             Vixphy
 baseurl:            ""
 url:                "https://vixphy.com.br"
 
