--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ url:                "https://vixphy.com.br"
 
 # Social Profiles
 twitter_username:   
-github_username:    
+github_username:    https://github.com/vixphy
 facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username: https://linkedin.com/company/vixphy-co
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
