--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ baseurl:            ""
 url:                "https://vixphy.com.br"
 
 # Social Profiles
-twitter_username:   
-github_username:    https://github.com/vixphy
-facebook_username:  
-instagram_username:  
-linkedin_username: https://linkedin.com/company/vixphy-co
+twitter_username:   vixphy
+github_username:    vixphy
+facebook_username:  vixphy
+instagram_username: vixphy
+linkedin_username:  company/vixphy-co
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
